Slash Commands are coming! Added support for slash commands. I am very behind with pushing stuff to git so for now here is the 1.21-1.21.4 version and the 1.21.5+ branch will be made later. I think this also includes the fix for the dimension regex. Honestly can't remember, will double check before I close that issue